{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 746,
  "lineage": "618328af-6f61-3e43-fc36-52f78cf5f847",
  "resources": [
    {
      "module": "module.ALB-Private",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/private-ALB/267f0eeeb3f9f21b",
            "arn_suffix": "app/private-ALB/267f0eeeb3f9f21b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-ALB-1904689527.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/private-ALB/267f0eeeb3f9f21b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-054ef524e20e0386a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0109178da969f6473"
              },
              {
                "subnet_id": "subnet-0e650d2f40068d9ef"
              }
            ],
            "subnets": [
              "subnet-0109178da969f6473",
              "subnet-0e650d2f40068d9ef"
            ],
            "tags": {
              "Name": "private-ALB"
            },
            "tags_all": {
              "Name": "private-ALB"
            },
            "vpc_id": "vpc-013a09a6eac601b5e",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Private",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:listener/app/private-ALB/267f0eeeb3f9f21b/57e24e60945f23da",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:listener/app/private-ALB/267f0eeeb3f9f21b/57e24e60945f23da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/private-ALB/267f0eeeb3f9f21b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB-Private.aws_lb.ALB",
            "module.ALB-Private.aws_lb_target_group.target-grp",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Private",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db",
            "arn_suffix": "targetgroup/private-target/97f7705abdcb42db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "private-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Private",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db-20230207185436521700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db",
            "target_id": "i-074004813c66de50d"
          },
          "dependencies": [
            "data.aws_ami.amazon-os",
            "module.ALB-Private.aws_lb_target_group.target-grp",
            "module.Private-Instance1.aws_instance.EC2-Private",
            "module.Private-Instance2.aws_instance.EC2-Private",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Private.aws_security_group.sg-private-ec2",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db-20230207185436866300000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/private-target/97f7705abdcb42db",
            "target_id": "i-0dc113c48c0b0c396"
          },
          "dependencies": [
            "data.aws_ami.amazon-os",
            "module.ALB-Private.aws_lb_target_group.target-grp",
            "module.Private-Instance1.aws_instance.EC2-Private",
            "module.Private-Instance2.aws_instance.EC2-Private",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Private.aws_security_group.sg-private-ec2",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Public",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/public-ALB/71abb09cfc1b483f",
            "arn_suffix": "app/public-ALB/71abb09cfc1b483f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-ALB-1903544132.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/public-ALB/71abb09cfc1b483f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0851a8fa18828390e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c1d81ba1000048a2"
              },
              {
                "subnet_id": "subnet-0e49a16e38f45d34d"
              }
            ],
            "subnets": [
              "subnet-0c1d81ba1000048a2",
              "subnet-0e49a16e38f45d34d"
            ],
            "tags": {
              "Name": "public-ALB"
            },
            "tags_all": {
              "Name": "public-ALB"
            },
            "vpc_id": "vpc-013a09a6eac601b5e",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.SG-Public.aws_security_group.sg-public-alb",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Public",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:listener/app/public-ALB/71abb09cfc1b483f/9c92d88047b09e78",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:listener/app/public-ALB/71abb09cfc1b483f/9c92d88047b09e78",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:loadbalancer/app/public-ALB/71abb09cfc1b483f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB-Public.aws_lb.ALB",
            "module.ALB-Public.aws_lb_target_group.target-grp",
            "module.SG-Public.aws_security_group.sg-public-alb",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Public",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274",
            "arn_suffix": "targetgroup/Public-target/7666d5a127fe5274",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Public-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB-Public",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274-20230207193052315900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274",
            "target_id": "i-035bd6e7ed6e08c94"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ALB-Private.aws_lb.ALB",
            "module.ALB-Public.aws_lb_target_group.target-grp",
            "module.Public-Instance1.aws_instance.EC2-public",
            "module.Public-Instance2.aws_instance.EC2-public",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274-20230207193052251900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:958021034198:targetgroup/Public-target/7666d5a127fe5274",
            "target_id": "i-0da99ec481ddd4574"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ALB-Private.aws_lb.ALB",
            "module.ALB-Public.aws_lb_target_group.target-grp",
            "module.Public-Instance1.aws_instance.EC2-public",
            "module.Public-Instance2.aws_instance.EC2-public",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Association-private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dcc0563a99201c7",
            "route_table_id": "rtb-0945eecb1fa898ee8",
            "subnet_id": "subnet-0109178da969f6473"
          },
          "dependencies": [
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.route-tables.aws_route_table.private-Table",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1482db6741080e",
            "route_table_id": "rtb-0945eecb1fa898ee8",
            "subnet_id": "subnet-0e650d2f40068d9ef"
          },
          "dependencies": [
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.route-tables.aws_route_table.private-Table",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Association-public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a30c7d5a041b790",
            "route_table_id": "rtb-03dbe355f167181a9",
            "subnet_id": "subnet-0c1d81ba1000048a2"
          },
          "dependencies": [
            "module.public-subnet.aws_subnet.subnet",
            "module.route-tables.aws_route_table.public-Table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b010f02d89a754",
            "route_table_id": "rtb-03dbe355f167181a9",
            "subnet_id": "subnet-0e49a16e38f45d34d"
          },
          "dependencies": [
            "module.public-subnet.aws_subnet.subnet",
            "module.route-tables.aws_route_table.public-Table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Private-Instance1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045fcb318f257597c",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-074004813c66de50d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074004813c66de50d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0caa34449b35e8249",
            "private_dns": "ip-10-0-1-217.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f01d72e07d42892c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0109178da969f6473",
            "tags": {
              "Name": "instance-private1"
            },
            "tags_all": {
              "Name": "instance-private1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018dae86e146343d4"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-os",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Private.aws_security_group.sg-private-ec2",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Private-Instance2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045fcb318f257597c",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-0dc113c48c0b0c396",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc113c48c0b0c396",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0187fad8ada606c6c",
            "private_dns": "ip-10-0-3-161.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-04ff426b5a790e95e",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e650d2f40068d9ef",
            "tags": {
              "Name": "instance-private2"
            },
            "tags_all": {
              "Name": "instance-private2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018dae86e146343d4"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-os",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Private.aws_security_group.sg-private-ec2",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public-Instance1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e0029f86a2c74c3",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-0da99ec481ddd4574",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da99ec481ddd4574",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ali",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029b3a9bdd2b41370",
            "private_dns": "ip-10-0-0-116.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.116",
            "public_ip": "3.101.66.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09879bd875179f0fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1d81ba1000048a2",
            "tags": {
              "Name": "instance-public1"
            },
            "tags_all": {
              "Name": "instance-public1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09eaf64e63a5cd793"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ALB-Private.aws_lb.ALB",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public-Instance2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e0029f86a2c74c3",
            "arn": "arn:aws:ec2:us-west-1:958021034198:instance/i-035bd6e7ed6e08c94",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035bd6e7ed6e08c94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ali",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002480c54057a144b",
            "private_dns": "ip-10-0-2-103.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.103",
            "public_ip": "13.52.179.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9474f267c078195",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e49a16e38f45d34d",
            "tags": {
              "Name": "instance-public2"
            },
            "tags_all": {
              "Name": "instance-public2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09eaf64e63a5cd793"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ALB-Private.aws_lb.ALB",
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG-Private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-private-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-054ef524e20e0386a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054ef524e20e0386a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09eaf64e63a5cd793"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Private-SG-ALB",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG-ALB"
            },
            "tags_all": {
              "Name": "Private-SG-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG-Private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-018dae86e146343d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018dae86e146343d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054ef524e20e0386a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Private-SG-EC2",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG-EC2"
            },
            "tags_all": {
              "Name": "Private-SG-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG-Private.aws_security_group.sg-private-alb",
            "module.SG-Public.aws_security_group.sg-public-ec2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG-Public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-public-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-0851a8fa18828390e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0851a8fa18828390e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Public-ALB",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Public-ALB"
            },
            "tags_all": {
              "Name": "SG-Public-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG-Public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:security-group/sg-09eaf64e63a5cd793",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eaf64e63a5cd793",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Public-EC2",
            "name_prefix": "",
            "owner_id": "958021034198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Public-EC2"
            },
            "tags_all": {
              "Name": "SG-Public-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0109178da969f6473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109178da969f6473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0e650d2f40068d9ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e650d2f40068d9ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0c1d81ba1000048a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d81ba1000048a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:subnet/subnet-0e49a16e38f45d34d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e49a16e38f45d34d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958021034198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:route-table/rtb-0945eecb1fa898ee8",
            "id": "rtb-0945eecb1fa898ee8",
            "owner_id": "958021034198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d686aa79372b9a11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-tb"
            },
            "tags_all": {
              "Name": "private-route-tb"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:route-table/rtb-03dbe355f167181a9",
            "id": "rtb-03dbe355f167181a9",
            "owner_id": "958021034198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e8d1049e1a237a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-tb"
            },
            "tags_all": {
              "Name": "public-route-tb"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017f205fa36981893",
            "association_id": "eipassoc-0515e2d16576f6a88",
            "domain": "vpc",
            "id": "eipalloc-017f205fa36981893",
            "network_border_group": "us-west-1",
            "network_interface": "eni-07d35775697b18f4e",
            "private_dns": "ip-10-0-0-145.us-west-1.compute.internal",
            "private_ip": "10.0.0.145",
            "public_dns": "ec2-54-176-209-32.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.209.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:internet-gateway/igw-09e8d1049e1a237a5",
            "id": "igw-09e8d1049e1a237a5",
            "owner_id": "958021034198",
            "tags": {
              "Name": "Gateway"
            },
            "tags_all": {
              "Name": "Gateway"
            },
            "vpc_id": "vpc-013a09a6eac601b5e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017f205fa36981893",
            "connectivity_type": "public",
            "id": "nat-0d686aa79372b9a11",
            "network_interface_id": "eni-07d35775697b18f4e",
            "private_ip": "10.0.0.145",
            "public_ip": "54.176.209.32",
            "subnet_id": "subnet-0c1d81ba1000048a2",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:958021034198:vpc/vpc-013a09a6eac601b5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040e4ac6993bbc5b9",
            "default_route_table_id": "rtb-01d7d456501475492",
            "default_security_group_id": "sg-0c7a1d9c49dd40abc",
            "dhcp_options_id": "dopt-031689a3e0eb1745f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013a09a6eac601b5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d7d456501475492",
            "owner_id": "958021034198",
            "tags": {
              "Name": "Ali-VPC"
            },
            "tags_all": {
              "Name": "Ali-VPC"
            }
          }
        }
      ]
    }
  ]
}